--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -54,6 +54,11 @@
     padding-bottom: 0.5em;
     border-bottom: 1px solid $border-color;
   }
+   
+  h3 {
+    padding: 0px;
+    margin: 0px;
+  }
 
   p, li, dl {
     font-size: 1em;
