Update link color variables in _variables.scss

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -90,9 +90,9 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
-$link-color-hover           : mix(#000, $link-color, 25%);
-$link-color-visited         : mix(#fff, $link-color, 25%);
+$link-color: #1F4788 !default;
+$link-color-hover: #163666 !default;
+$link-color-visited: #0f2344 !default;
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%);
 
