Modify link styles in _archive.scss
Updated link styles to remove underline and set color.

--- a/_sass/_archive.scss
+++ b/_sass/_archive.scss
@@ -15,14 +15,16 @@
   }
 
   a {
-    text-decoration: underline;
-
+    color: $link-color;
+    text-decoration: none;
+    
     &:hover {
+      color: $link-color-hover;
       text-decoration: underline;
-
-      img {
-        box-shadow: 0 0 10px rgba(#000, 0.25);
-      }
+    }
+    
+    &:visited {
+      color: $link-color-visited;
     }
   }
 }
